--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "react-hook-form": "^7.12.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-token-auth": "^1.1.8",
     "web-vitals": "^1.1.2"
   },
   "proxy": "http://localhost:5000",
