--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ Flask-Migrate==3.1.0
 flask-restx==0.5.0
 Flask-SQLAlchemy==2.5.1
 greenlet==2.0.1
+gunicorn
 itsdangerous==2.0.1
 Jinja2==3.0.1
 jsonschema==3.2.0
