--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,7 @@ Flask-Migrate==3.1.0
 flask-restx==0.5.0
 Flask-SQLAlchemy==2.5.1
 greenlet==2.0.1
-gunicorn
+gunicorn==20.1.0
 itsdangerous==2.0.1
 Jinja2==3.0.1
 jsonschema==3.2.0
@@ -20,6 +20,7 @@ PyJWT==2.1.0
 pyrsistent==0.18.0
 python-dateutil==2.8.2
 python-decouple==3.4
+python-dotenv==0.21.0
 python-editor==1.0.4
 pytz==2021.1
 six==1.16.0
